test-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2025-01-11T12:06:41Z"
  labels:
    run: test-pod
  name: test-pod
  namespace: default
  resourceVersion: "9823"
  uid: 9b6a48d2-78d1-496b-bb90-15a4f79293c8
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: test-pod
    ports:
    - containerPort: 80
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-ldk94
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: kspm-worker-1
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-ldk94
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2025-01-13T01:42:07Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2025-01-11T12:06:41Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2025-01-13T01:42:07Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2025-01-13T01:42:07Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2025-01-11T12:06:41Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://775de7e029a6f0eedd95a20019c2843123590ac9bcc7848d1ee0a00eff13e915
    image: docker.io/library/nginx:latest
    imageID: docker.io/library/nginx@sha256:42e917aaa1b5bb40dd0f6f7f4f857490ac7747d7ef73b391c774a41a8b994f15
    lastState:
      terminated:
        containerID: containerd://3f69db02fc3c9bf90147d3690abc8f31d1188f7f242739ad4d4a3452e4536f40
        exitCode: 255
        finishedAt: "2025-01-13T01:30:19Z"
        reason: Unknown
        startedAt: "2025-01-11T12:06:45Z"
    name: test-pod
    ready: true
    restartCount: 1
    started: true
    state:
      running:
        startedAt: "2025-01-13T01:42:07Z"
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-ldk94
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 10.30.22.167
  hostIPs:
  - ip: 10.30.22.167
  phase: Running
  podIP: 10.244.1.10
  podIPs:
  - ip: 10.244.1.10
  qosClass: BestEffort
  startTime: "2025-01-11T12:06:41Z"
